cabal-version:      2.4
name:               ErrHandling
version:            0.1.0.0

common common-options
    default-language: Haskell2010
    ghc-options:      -Wall

    build-depends:    base < 5

library
    import:           common-options
    exposed-modules:  Main
    build-depends:    text
    hs-source-dirs:   src
